--- a/transcribe.io/transcribe.io/transcribe.io.csproj
+++ b/transcribe.io/transcribe.io/transcribe.io.csproj
@@ -40,7 +40,9 @@
 
     <ItemGroup>
         <!-- App Icon -->
-        <MauiIcon Include="Resources\AppIcon\appicon.png" BaseSize="128,128"/>
+        <MauiIcon Include="Resources\AppIcon\appicon.png">
+          <BaseSize>128,128</BaseSize>
+        </MauiIcon>
 
         <!-- Splash Screen -->
         <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#eb233d" BaseSize="128,128"/>
