--- a/transcribe.io/transcribe.io/transcribe.io.csproj
+++ b/transcribe.io/transcribe.io/transcribe.io.csproj
@@ -6,6 +6,7 @@
             net8.0-android;net8.0-ios;net8.0-maccatalyst;net8.0-windows10.0.19041.0
         </TargetFrameworks>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <RuntimeIdentifiers>android-arm64</RuntimeIdentifiers>
         <!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
         <!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen</TargetFrameworks> -->
 
