--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,12 @@ jobs:
       with:
         dotnet-version: 8.0.x
     
+    - name: Install .NET MAUI workload
+      run: |
+        dotnet workload install maui
+        dotnet workload install maui-android
+        dotnet workload install maui-ios
+    
     - name: Restore dependencies
       run: dotnet restore
       working-directory: ./transcribe.io/
